# tick-vector

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.github/workflows/: architecture.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md
scripts/: check-architecture.sh
src/: main.cpp  resources.qrc
src/adapters/: RithmicMarketDataAdapter.cpp  RithmicMarketDataAdapter.hpp  RithmicProtocolClient.cpp  RithmicProtocolClient.hpp  SimulatedMarketDataAdapter.cpp  SimulatedMarketDataAdapter.hpp  TradingAdapterFactory.cpp  TradingAdapterFactory.hpp
src/app/: AppConstants.hpp
src/core/: AccountStore.cpp  AccountStore.hpp  ChartDataCache.cpp  ChartDataCache.hpp  ConnectionConfig.cpp  ConnectionConfig.hpp  FeedConnection.hpp  FeedConnectionStore.cpp  FeedConnectionStore.hpp  MacKeychain.cpp  MacKeychain.hpp  MarketDataAdapter.hpp  Types.hpp
src/ui/: ChartWindow.cpp  ChartWindow.hpp  ConnectionTestDialog.cpp  ConnectionTestDialog.hpp  DomWindow.cpp  DomWindow.hpp  FeedSettingsDialog.cpp  FeedSettingsDialog.hpp  MainWindow.cpp  MainWindow.hpp  SelectInstrumentDialog.cpp  SelectInstrumentDialog.hpp
